# TFLCompiler

./: .gitmodules  CMakeLists.txt
src/: core.cc  core.h  main.cc  model.h  tbuffer.h  tcore.cc  tcore.h  tmodel.cc  tmodel.h  toperator.cc  toperator.h  tsubgraph.cc  tsubgraph.h  ttensor.cc  ttensor.h  utils.cc  utils.h
src/operators/: tfc.cc  tfc.h  treshape.cc  treshape.h
src/operators/fc/: fc.cc
src/schema/: schema_v3a_generated.h
test/: tests.cc  utest1.py
test/TFLfiles/: mnist.tflite
